-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.9, 6.8.3, 6.9.1, 6.10.0 Beta1
-
Windows 10 22H2, MSVC 2022 x64
-
8a29649cb (dev), 783e03999 (6.10), b91da5042 (6.9), bd1d4521e (tqtc/lts-6.8)
This has similar symptoms and workarounds as QTBUG-133587 but this doesn't involve QTP0004
The attached project fails to run:
QQmlApplicationEngine failed to load component qrc:/qt/qml/App/Main.qml: "MyModule" is ambiguous. Found in qrc:/qt/qml/MyModule/ and in qrc:/qt/qml/MyModule/ qrc:/qt/qml/App/Main.qml: Failed to load dependent import "MyModule" version 255.255
The error goes away with any one of the following actions:
- Removing the *.mjs file from MyModule
- Replacing "IMPORTS MyModule" with "DEPENDENCIES MyModule" (or just removing the IMPORTS)
- Moving the module from ${CMAKE_SOURCE_DIR}/modules/MyModule to ${CMAKE_SOURCE_DIR}/MyModule
- is duplicated by
-
QTBUG-139233 js files cause app to fail to run with ambiguous errors
-
- Reported
-
-
QTBUG-138418 QML import unable to disambiguate module from itself if it contains JavaScript
-
- Closed
-
- relates to
-
QTBUG-133587 Putting *.js file under QML_FILES and applying QTP0004 can break QML engine's ability to import module
-
- Closed
-
For Gerrit Dashboard: QTBUG-138391 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
660039,5 | QtQml: Look for existing imports even without redirection | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
660575,2 | QtQml: Look for existing imports even without redirection | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
660659,2 | QtQml: Look for existing imports even without redirection | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
660663,2 | QtQml: Look for existing imports even without redirection | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |