QtQml: Look for existing imports even without redirection

It makes no sense to prohibit multiple imports of the same QML module
with the same version. We can just re-order the imports according to
prcedence when we detect this.

Pick-to: 6.8
Fixes: QTBUG-138391
Change-Id: I5ad94e1181f6a2beb278e421c1bbf06678fd863b
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
(cherry picked from commit 8a29649cb79b258efbe918d92c7f78f07d535282)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 783e0399917675b22df124c7a4d5bd5823825a96)